--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "esbuild-dev": "node esbuild.config.js --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "esbuild": "^0.13.15",
     "glob": "^7.2.0",
-    "postcss": "^8.4.0",
+    "postcss": "^8.4.6",
+    "postcss-advanced-variables": "^3.0.1",
+    "postcss-cli": "^9.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
-    "postcss-preset-env": "^7.0.1"
+    "postcss-nested": "^5.0.6",
+    "postcss-preset-env": "^7.0.1",
+    "postcss-scss": "^4.0.3"
+  },
+  "dependencies": {
+    "govuk-frontend": "^4.0.1"
   }
 }
